roles/k8s_helm/clickhouse/templates/otel-collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: default
spec:
  ports:
  - port: 3100
    targetPort: 3100
    protocol: TCP
  - port: 3200
    targetPort: 3200
    protocol: TCP
  - port: 8088
    targetPort: 8088
    protocol: TCP
  - port: 5514
    targetPort: 5514
    protocol: TCP
  - port: 24224
    targetPort: 24224
    protocol: TCP
  - port: 4317
    targetPort: 4317
    protocol: TCP
  - port: 4318
    targetPort: 4318
    protocol: TCP
  - port: 14250
    targetPort: 14250
    protocol: TCP
  - port: 14268
    targetPort: 14268
    protocol: TCP
  - port: 9411
    targetPort: 9411
    protocol: TCP
  - port: 11800
    targetPort: 11800
    protocol: TCP
  - port: 12800
    targetPort: 12800
    protocol: TCP
  - port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: otel-collector
